gccida/g0/count_error
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/count_error/src/diagnostic.c:1397:7: error: use of undeclared identifier 'warning_message_1'
if ( !warning_message_1 ) 
      ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/count_error/src/diagnostic.c:1400:1: error: use of undeclared identifier 'warning_message_1'
warning_message_1 = 1; 
^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/count_error/src/obj/diagnostic.o] Error 1
